# framework

data-platform-spark-framework/: Makefile  README.md  air4thai_station.js  bitbucket-pipelines.yml  main.py  pyproject.toml  requirements.txt
data-platform-spark-framework/conf/: properties-cluster.txt  system.yaml
data-platform-spark-framework/conf/pipelines/air4thai/: dag_config.yaml  discovery_to_standardized.yaml  raw_to_discovery.yaml
data-platform-spark-framework/conf/pipelines/air4thai_station/: discovery_to_standardized.yaml  raw_to_discovery.yaml
data-platform-spark-framework/conf/pipelines/air4thai_v3/: discovery_to_standardized.yaml  raw_to_discovery.yaml
data-platform-spark-framework/conf/pipelines/airbkk/: dag_config.yaml  (+2 more)
data-platform-spark-framework/ddl/discovery/: air4thai.sql  airbkk.sql  customers.sql  dustboy.sql  usgs_earthquake.sql  viirs_geojson.sql
data-platform-spark-framework/ddl/discovery__dpm/: dpmalert.sql
data-platform-spark-framework/ddl/discovery__nasa/: viirs.sql
data-platform-spark-framework/ddl/discovery__pcd/: air4thai_station.sql  air4thai_v3.sql
data-platform-spark-framework/ddl/standardized/: air4thai.sql  airbkk.sql  customers.sql  dpmaalert.sql  dustboy.sql  usgs_earthquake.sql  viirs_geojson_bq.sql
data-platform-spark-framework/ddl/standardized__nasa/: viirs.sql
data-platform-spark-framework/ddl/standardized__pcd/: air4thai_station.sql  air4thai_v3.sql
data-platform-spark-framework/doc/: pipeline_configuration_guide.md
data-platform-spark-framework/src/pipeline/: __init__.py  env_config.yaml  main.py
(+47 files in other folders)
